[package]
name = "abc232"
version = "0.1.0"
edition = "2021"

[dependencies]
num = "0.2.1"
num-derive = "0.3.0"
ndarray = "0.13.0"
nalgebra = "0.20.0"
libm = "0.2.1"
rand = "0.7.3"
rand_distr = "0.2.2"
petgraph = "0.5.0"
indexmap = "1.3.2"
regex = "1.3.6"
lazy_static = "1.4.0"
ordered-float = "1.0.2"
ascii = "1.0.0"
permutohedron = "0.2.4"
superslice = "1.0.0"
itertools = "0.9.0"
itertools-num = "0.1.3"
maplit = "1.0.2"
either = "1.5.3"
im-rc = "14.3.0"
fixedbitset = "0.2.0"
bitset-fixed = "0.1.0"
text_io = "0.1.8"
whiteread = "0.5.0"
rustc-hash = "1.1.0"
smallvec = "1.2.0"

[dependencies.proconio]
version = "0.3.6"
features = [ "derive",]

[profile.release]
lto = true
panic = "abort"
